--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 click==7.1.2
 cycler==0.10.0
 kiwisolver==1.3.1
-llvmlite==0.36.0
 matplotlib==3.4.1
-numba==0.53.1
 numpy==1.20.2
 pandas==1.2.3
 Pillow==8.2.0
@@ -20,4 +18,5 @@ python-dotenv==0.17.0
 pytz==2021.1
 qt5-applications==5.15.2.2.1
 qt5-tools==5.15.2.1.0.1
+scipy==1.5.4
 six==1.15.0
