--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pyserial==3.5
 python-dateutil==2.8.1
 python-dotenv==0.17.0
 pytz==2021.1
+PyYAML==5.4.1
 qt5-applications==5.15.2.2.1
 qt5-tools==5.15.2.1.0.1
 scipy==1.5.4
