--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ PyQt5-sip==12.8.1
 PyQt5-stubs==5.15.2.0
 pyqt5-tools==5.15.2.3.0.2
 pyserial==3.5
+pytest==6.2.4
 python-dateutil==2.8.1
 python-dotenv==0.17.0
 pytz==2021.1
