--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
+atomicwrites==1.4.0
+attrs==21.2.0
 click==7.1.2
+colorama==0.4.4
 cycler==0.10.0
+et-xmlfile==1.1.0
+iniconfig==1.1.1
 kiwisolver==1.3.1
 matplotlib==3.4.1
 numpy==1.20.2
+openpyxl==3.0.9
+packaging==21.0
 pandas==1.2.3
 Pillow==8.2.0
+pluggy==0.13.1
+py==1.10.0
 pyparsing==2.4.7
 PyQt5==5.15.2
 pyqt5-plugins==5.15.2.2.1.0
@@ -22,3 +31,5 @@ qt5-applications==5.15.2.2.1
 qt5-tools==5.15.2.1.0.1
 scipy==1.5.4
 six==1.15.0
+toml==0.10.2
+xlrd==2.0.1
