--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.4
 cycler==0.10.0
 et-xmlfile==1.1.0
 iniconfig==1.1.1
+joblib==1.1.0
 kiwisolver==1.3.1
 matplotlib==3.4.1
 numpy==1.20.2
@@ -29,7 +30,9 @@ pytz==2021.1
 PyYAML==5.4.1
 qt5-applications==5.15.2.2.1
 qt5-tools==5.15.2.1.0.1
+scikit-learn==1.0.1
 scipy==1.5.4
 six==1.15.0
+threadpoolctl==3.0.0
 toml==0.10.2
 xlrd==2.0.1
